# adventofcode-python

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: readme-stars.yml
2021/day01/: solution.py  test_solution.py
2021/day02/: solution.py
2021/day03/: test_solution.py
2021/day04/: solution_test.py
2021/day05/: solution.py  solution_test.py
aoc/: cli.py
aoc/aoc2021/day01/: solution.py
aoc/aoc2021/day02/: solution.py
aoc/aoc2021/day03/: solution.py
aoc/aoc2021/day04/: solution.py
aoc/aoc2021/day05/: solution.py
aoc/aoc2021/day06/: solution.py
aoc/aoc2021/day07/: solution.py
aoc/aoc2021/day08/: solution.py
aoc/aoc2021/day09/: solution.py
aoc/aoc2021/day10/: solution.py
aoc/aoc2021/day11/: solution.py
aoc/aoc2021/day12/: solution.py
aoc/aoc2021/day13/: solution.py
aoc/aoc2021/day14/: solution.py
aoc/aoc2021/day15/: solution.py
aoc/aoc2021/day16/: solution.py
aoc/aoc2021/day17/: solution.py
aoc/aoc2021/day18/: solution.py
aoc/aoc2021/day20/: solution.py
aoc/aoc2021/day21/: solution.py
aoc2021/day03/: solution.py
aoc2021/day04/: solution.py
aoc2021/day05/: solution.py
aoc2021/day06/: solution.py
tests/: aoc2021_day01_test.py  aoc2021_day03_test.py  aoc2021_day04_test.py  aoc2021_day05_test.py  aoc2021_day06_test.py  aoc2021_day07_test.py  aoc2021_day08_test.py  aoc2021_day09_test.py  aoc2021_day10_test.py  aoc2021_day11_test.py  aoc2021_day12_test.py  aoc2021_day13_test.py  aoc2021_day14_test.py  aoc2021_day15_test.py  aoc2021_day16_test.py  aoc2021_day17_test.py  aoc2021_day18_test.py
(+1 files in other folders)
