[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | venv
  | README.md
)/
'''

[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["mugimaru <pochi.73@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
